--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 font-size: 2em;
             }
             div:hover{
-                color:blue;
+                color:rgb(2, 2, 99);
             }
             a{
                 text-decoration:none;
