--- a/main.html
+++ b/main.html
@@ -1,7 +1,24 @@
 <html>
     <head>
-        <title></title>
+        <title>main</title>
+        <link rel="icon" type="image/x-icon" href="./img/favicon-16x16.png"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <style>
+            body{
+                font-family: 'Kanit', sans-serif;
+            }
+        </style>
     </head>
     <body>
+        <h1><i class="fa-regular fa-snowflake"></i>1st assignment</h1>
+        <ul>
+            <li><a href="ex1.html" target="_blank">ex1</a></li>
+            <li><a href="ex2.html" target="_blank">ex2</a></li>
+            <li><a href="ex3.html" target="_blank">ex3</a></li>
+            <li><a href="ex4.html" target="_blank">ex4</a></li>
+        </ul>
     </body>
 </html>
