--- a/Week1-Assignment 1/main.html
+++ b/Week1-Assignment 1/main.html
@@ -2,7 +2,7 @@
     <head>
         <title>main</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-        
+        <link rel="icon" type="image/x-icon" href="../img/favicon-16x16.png"/>
         <style>
             div{
                 font-size: 50;
