--- a/Week1-Assignment 2/수직메뉴.html
+++ b/Week1-Assignment 2/수직메뉴.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <style>
             #green{
-                    width: 150;
-                    height: 200;
+                    width: 150px;
+                    height: 200px;
                     background-color:yellowgreen;
                     display: flex;
                     justify-content: center
