--- a/week1ex2.html
+++ b/week1ex2.html
@@ -1,38 +1,59 @@
 <html>
     <head>
         <title>
-
+            ex2
         </title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
         <style>
-            body {
+            #panel{
                 background-color: pink;
-                color:rgb(250, 246, 246);
+                width: 800px;
+                height: 100px;
+                margin-top: 50px;
+                margin-left: 50px;
+                line-height: 100px;
+            }
 
-            }
-            div:hover {
-                color:rgb(230, 82, 205);
-                
-            }
-            div {
-                width: 150px;
-            }
-            
+         #panel>ul>li{
+            list-style-type: none;
+            margin: 6px;
+            width: 100px;
+            display: inline-block;
+         }
+
+
+         #panel>ul>li>a{
+            text-decoration: none;
+            color: white;
+            width: 100px;
+            height: 27px;
+         }
+
+         #panel a:hover{
+            color: palevioletred;
+            font-weight: 700;
+         }
+
+
+
         </style>
+
+
+
     </head>
     <body>
-        <ul>
-            <li><div>&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-list"></i>&nbsp;게시판</div></li>
-            <li><div>&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-camera"></i>사진첩</li>
-            <li><div>&nbsp;&nbsp;&nbsp;<i class="fa-regular fa-comment-dots"></i>채팅방</div></li>
-            <li><div>&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-calendar-days"></i>캘린더</div></li>
-            <li><div>&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-person"></i>멤버</div></li>
-            <li><div>&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-gear"></i>설정</div></li>
-        </ul>
+        <div id="panel">
+            <ul>
+                <li><a href=""><i class="fa-solid fa-list"></i>게시판</a></li>
+                <li><a href="">사진첩</a></li>
+                <li><a href="">채팅방</a></li>
+                <li><a href="">캘린더</a></li>
+                <li><a href="">멤버</a></li>
+                <li><a href="">설정</a></li>
 
+            </ul>
 
-
-
+        </div>
     </body>
 </html>
