--- a/week1-assignment/assignment1.html
+++ b/week1-assignment/assignment1.html
@@ -5,7 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap" rel="stylesheet">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/x-icon" href="./img/favicon-16x16.png">
         <style>
             body {
                 font-family: 'Inconsolata', monospace;
@@ -35,11 +35,12 @@
         </style>
     </head>
     <body> 
-        <div><i class="fa-sharp fa-solid fa-house"></i>&nbsp;1st assignment</div>
+        <div><i class="fa-solid fa-snowflake"></i>1st assignment</div>
         <ul>
-            <li><i class="fa-sharp fa-solid fa-star"></i><a href="vertical.html" target="_blank"> vertical menu</a></li>
-            <li><i class="fa-sharp fa-solid fa-star"></i><a href="horizontal.html" target="_blank"> horizontal menu</a></li>
-            <li><i class="fa-sharp fa-solid fa-star"></i><a href="card.html" target="_blank"> flip the card</a></li>
+            <li><i class="fa-solid fa-temperature-half"></i><a href="./ex1.html" target="_blank"> ex1</a></li>
+            <li><i class="fa-solid fa-temperature-half"></i><a href="ex2.html" target="_blank"> ex2</a></li>
+            <li><i class="fa-solid fa-temperature-half"></i><a href="ex3.html" target="_blank"> ex3</a></li>
+            <li><i class="fa-solid fa-temperature-half"></i><a href="ex4.html" target="_blank"> ex4</a></li>
         </ul>
     </body>
 </html>
