--- a/website.html
+++ b/website.html
@@ -2,54 +2,10 @@
     <head>
         <title>Website</title>
         <style>
-            *{
-                padding: 0;
-                margin: 0;
-            }
 
-            .header{
-                height: 60px;
-                background-color: #999;
-            }
-            .header>ul>li{
-                list-style: none;
-                float: left;
-                padding: 0 20px;
-                height: 60px;
-                font-size: 15px;
-                line-height: 60px;
-                font-weight: 800;
-            }
-            .header>ul>li>a{
-                display: inline-block;
-                background-color: red;
-            }
-            .header>ul>li:hover{
-                background-color: beige;
-                cursor: pointer;
-            }
-            .header>ul>li:nth-child(1):hover {
-                background-color: pink;
-            }
-
-            .body{
-                height: -moz-calc(100% - 100px); /* Firefox */
-                height: -webkit-calc(100% - 100px); /* Chrome, Safari */
-                height: calc(100% - 120px); /* IE9+ and future browsers */
-                clear: both;
-            }
-            .footer{
-                background-color: #999;
-                height: 60px;
-            }
-            a{
-                color:black;
-                text-decoration: none;
-            }
             h1{
                 text-align: center;
             }
-
             iframe{
                 width: 100%;
                 height: 100%;
@@ -57,6 +13,7 @@
 
         </style>
         <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/main.css"></link>
     </head>
     <body>
         <div class="wrapper">
