--- a/website.html
+++ b/website.html
@@ -4,7 +4,14 @@
         <style>
 
             h1{
+                position: fixed;
+                top:0;
+                left:0;
+                width: 100%;
+                height: 100%;
                 text-align: center;
+                margin-top: 80px;
+                color: white;
             }
             iframe{
                 width: 100%;
