--- a/Webpages/html/html3.html
+++ b/Webpages/html/html3.html
@@ -5,7 +5,7 @@
         <style>
             img{
                 float: left;
-                width: 100px;
+                width: 200px;
                 margin-right: 20px;
                 margin-bottom:20px;
             }
@@ -22,7 +22,7 @@
         </style>
     </head>
     <body>
-        <p> <img src="../download.jfif"><span>어</span>
+        <p> <img src="/img/Screenshot_20230210_084154_Gallery.jpg"><span>애비게일</span>
             </p> 애비게일은 잡화점에서 부모님과 같이 살고 있습니다. 
         </br>가끔씩 애비게일의 '전통방식과 다른 생활방식'을 걱정하는 엄마와 싸우곤 합니다. 
         </br>그녀의 어머니는 다음과 같이 말합니다. "애비게일이 옷 좀 평범하게 입고 이제 푸른색 머리로 염색하지 않았으면 좋겠어. 
