--- a/webpages/week2-assignment/assignment1.html
+++ b/webpages/week2-assignment/assignment1.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>about pengsu</title>
+        <title>assignment1</title>
         <style>
             img{
                 float:left;
@@ -9,14 +9,21 @@
             p{
                 width: 500;
             }
-            img{
-                width: 200;
+            .pengsu{
+                width: 200px;
+                height: 200px;
+                background-image: url("../../pengsu.png");
+                background-position: center;
+                background-size: cover;
+                display: inline-block;
+
             }
-            
+            .pengsu:hover{
+                background-image: url("../../pengha.png");
+            }
             h2{
                 background-color: orange;
                 color: black;
-                width: 500;
             }
             span{
                 font-weight: 900;
@@ -28,7 +35,7 @@
     <body>
         <h2>안농 난 펭수얌</h2>
         <p>
-            <img src="../pengsu.png">
+            <div class="pengsu"></div>
             <span>황</span>제펭귄의 새끼와 유사한 외형을 가지고 있지만 덩치는 성체 황제펭귄을 훌쩍 넘는 거대한 어린이 펭귄이다. 이름의 뜻은 남극 '펭'에 빼어날 '수'(秀)라고 하며, 마이 리틀 텔레비전 V2에서 밝힌 바로는 본인이 지은 이름이라고 한다. <br>인터뷰 영상 이후 이름에 대해서는 다른 방송 등에 출연하였을 때도 동일하게 설명하고 있으므로 즉석에서 지어낸것이지만 공식설명이라 볼 수 있다. 
 
             현재 EBS 연습생으로 최고의 크리에이터가 되는 것이 꿈이며, 펭수의 오디션 영상을 보면 그 꿈을 이루기 위해 남극에서 한국까지 헤엄쳐 왔다고 한다. 이후 2019년 4월에 인천 앞바다에 상륙해서 어떤 은인의 도움을 받고 구조되어 택시를 타서 EBS까지 오디션을 보러 갈 수 있었다고 한다.
