--- a/Webpages/HTML/html3.html
+++ b/Webpages/HTML/html3.html
@@ -23,12 +23,8 @@
         </style>
     </head>
     <body>
-        <p> <img src="../../pororo.jpg"/><span>어</span>린 수컷 펭귄을 의인화한 캐릭터로 세계 대전 기간 조종사들이 쓰고 다녔을 법한 헬멧에 방풍 고글을 쓰고 다니는 시대를 초월한 패션 감각을 가지고 있었다. 3기부터는 의상이 바뀌어서 머리를 감싸는 헬멧에 쫄쫄이로 너프되었다. 뽀로로의 고글에는 렌즈가 없다.
-
-            <br><br>밝고 활기찬 성격을 가지고 있으며, 호기심과 욕심이 많아서 자주 사고를 치곤 한다. 특히 크롱과는 첫 에피소드부터 같은 집에서 살지만 오히려 지나치게 자주 싸운다. 하지만 크롱을 계속 보살피니 대인배임이 분명하다.
-            
-            <br>날지 못하는 새의 클리셰인 "하늘을 날고 싶다"는 꿈도 있다. 꿈을 이루기 위해 여러 방법을 시도했지만 땅에 떨어지며 날지 못했다. 결국 포비의 조언으로 물 속에서 헤엄치며 대리만족했다.[4] 이후 에디가 2인승 비행기[5]를 만들어서 크롱과 함께 비행기를 타고 하늘을 날게 되어 꿈을 정말로 이루게 된다.
-            
-            <br>상기했듯이 초기에는 제1차 세계 대전 때 쓰던 비행모자와 고글만 있는 디자인이었다가 시즌 3부터 모자가 헬멧으로 바뀌고 전신을 가리는 점프수트 쫄쫄이 형태의 옷이 추가되었다. 물론 뽀로로만 옷이 추가된 것은 아니고 대표적으로 포비를 비롯한 이 때 모든 등장인물에게 옷을 입혔다. 이는 제작사가 바뀌었기 때문이라고 한다.[6]</p>
+        <p> <img src="../../pooh.jpg"/><span>원</span>작 제목이 'Winnie the Pooh' 라는 것에서 알 수 있듯이, 
+            주인공 '푸(Pooh)' 는 친구들 사이에서 부르는 별명이고, 진짜 본명은 위니(Winnie)라고 부른다. 이것은 곰돌이 푸의 품종이 푸 베어(Pooh bear)였던 듯 하다. 
+            즉, "곰돌이 위니"라는 뜻인데, 나중에 하이픈이 추가되어 'Winne-the-Pooh' 가 되었으며, 따라서 정식으로는 풀네임이 통째로 '위니 더 푸' 라고 부르고 줄여서 그냥 '푸'라고 부른다.</p>
     </body>
 </html>
